# ohtu-tehtavat-2022

./: README.md  retro.md
viikko1/nhl-statistics-1/: coverage.xml
viikko1/nhl-statistics-1/src/: player_reader.py  statistics.py
viikko1/nhl-statistics-1/src/tests/: statistics_test.py
viikko2/poetry-web/: pyproject.toml
viikko2/project-reader/src/: project_reader.py
viikko2/verkkokauppa-1/: pyproject.toml
viikko2/verkkokauppa-1/src/: index.py  kauppa.py  kirjanpito.py  pankki.py  varasto.py
viikko3/hello-robot/src/tests/: increase_counter.robot
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot  resource.robot
viikko3/nhl-reader/src/: index.py  player.py  playerReader.py  playerStats.py
viikko4/int-joukko/src/: int_joukko.py
viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/tdd-ostoskori/src/: ostoskori.py  tuote.py
viikko4/tdd-ostoskori/src/tests/: ostoskori_test.py
viikko4/verkkokauppa/: .coverage
viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/tennis/src/: tennis_game.py
