[tool.poetry]
name = "verkkokauppa-1"
version = "0.1.0"
description = ""
authors = ["Kalle Ilves <kalle.ilves@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry = {version = "^1.1.13", python = "^3.8"}
init = {version = "^0.1.0", python = "^3.8"}

[tool.poetry.dev-dependencies]
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
